--- a/web/pages/inputImages.html
+++ b/web/pages/inputImages.html
@@ -46,11 +46,24 @@
     </div>
     </br>
 
-    <div>
-      <h2> Currently specified files </h2>
-      <p> UNDER CONSTRUCTION</p>
-
+    <div style="margin-left:5%">
       <h2> Instructions </h2>
+      <p> The labels of a catagory are defined by string=tag. </br>
+          the string specifies the text that indicates the file as a member of that
+          category </p>
+      <h5> Example </h5>
+      <p>
+          If a list of images of cats and dogs are used, and each image is labelled
+          cat1.png, cat2.png, cat3.png, ..., dog1.png, dog2.png, ... </br>
+          then you would label this cat=0,dog=1 </br>
+      </p>
+      <h5> Example 2 </h5>
+      <p>
+          If a list of images of cats and dogs are used, and each image is labelled
+          cat1.png, cat2.png, ..., dalmation1.png, pug2.png, ... </br>
+          then you would label this cat=0,dalmation=1,pug=1,...  </p>
+
+      <h2> Currently specified files </h2>
       <p> UNDER CONSTRUCTION</p>
     </div>
 
